--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
         <section>
          <ul>
              <li>
-                 <img src="images/img.jpg" alt="Mark Guerrero" width="264px">
+                 <img src="./images/img.jpg" alt="Mark Guerrero" width="264px">
                  <h3>Mark Guerrero</h3>
                  <p>Product Designer</p>
              </li>
              <li>
-                 <img src="images/img-kopi.jpg" alt="Tom Ford" width="264px">
+                 <img src="./images/img-kopi.jpg" alt="Tom Ford" width="264px">
                  <h3>Tom Ford</h3>
                  <p>Frontend Developer</p>
              </li>
              <li>
-                 <img src="images/img-kopi 2.jpg" alt="Camila Garcia" width="264px">
+                 <img src="./images/img-kopi 2.jpg" alt="Camila Garcia" width="264px">
                  <h3>Camila Garcia</h3>
                  <p>Marketing</p>
              </li>
              <li>
-                 <img src="images/img-kopi 3.jpg" alt="Daniel Wilson" width="264px">
+                 <img src="./images/img-kopi 3.jpg" alt="Daniel Wilson" width="264px">
                  <h3>Daniel Wilson</h3>
                  <p>UI Designer</p>
              </li>
@@ -77,32 +77,32 @@
          <h3>Our Portfolio</h3>
          <ul>
              <li>
-                 <img src="images/bankingapp.jpg" alt="Banking App" width="360" height="300" >
+                 <img src="./images/bankingapp.jpg" alt="Banking App" width="360" height="300" >
                  <h3>Banking App</h3>
                  <p>App</p>
              </li>
              <li>
-                 <img src="images/cashlesspayment.jpg" alt="Cashless Payment" width="360" height="300">
+                 <img src="./images/cashlesspayment.jpg" alt="Cashless Payment" width="360" height="300">
                  <h3>Cashless Payment</h3>
                  <p>Marketing</p>
              </li>
              <li>
-                 <img src="images/meditation.jpg" alt="Meditation App" width="360" height="300">
+                 <img src="./images/meditation.jpg" alt="Meditation App" width="360" height="300">
                  <h3>Meditation App</h3>
                  <p>App</p>
              </li>
              <li>
-                 <img src="images/taxi.jpg" alt="Taxi Service" width="360" height="300">
+                 <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300">
                  <h3>Taxi Service</h3>
                  <p>Marketing</p>
              </li>
              <li>
-                 <img src="images/screen.jpg" alt="Screen Illustrations" width="360" height="300">
+                 <img src="./images/screen.jpg" alt="Screen Illustrations" width="360" height="300">
                  <h3>Screen Illustrations</h3>
                  <p>Design</p>
              </li>
              <li>
-                 <img src="images/online.jpg" alt="Online Courses" width="360" height="300">
+                 <img src="./images/online.jpg" alt="Online Courses" width="360" height="300">
                  <h3>Online Courses</h3>
                  <p>Marketing</p>
              </li>
